--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@
         font-size: 0.9rem;
         color: hsl(187, 24%, 22%);  
     }
-    .verde{
+    .pointGreen{
         font-family: karla;
         color: #04AA6D;
     }
@@ -44,7 +44,7 @@
         font-family: karla;
     }
 
-    .contenedor{
+    .container{
         height: auto;
         width: 90%;
         border: 2px solid white;
@@ -54,7 +54,7 @@
         margin-top: 10%;
         margin-left: 5%;
     }
-    .formulario{
+    .form{
         display: grid;
         grid-template-columns: 1fr;
         gap: 0.8rem;
@@ -112,8 +112,7 @@
         color: white;
         border-radius: 0.5rem;
         height: 4.5rem;
-        width: 100%;
-        /* margin-left: 3%;  */  
+        width: 100%;  
     }
     .query1, .query2{
        justify-content: start;
@@ -161,10 +160,10 @@
         background-color: #04AA6D;
     }
 
-    /**********Ahora hacer la vista de computadora***************************
+    /********* Computer view ***************************
     *************************************************************************/
     @media(min-width: 400px){
-        .contenedor{
+        .container{
            
             height: auto;
             width: 45%;
@@ -174,7 +173,7 @@
             border: 2px solid white;
             border-radius: 0.6rem;
         }
-        .formulario{
+        .form{
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 0.6rem;
