--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,11 @@
         font-family: karla;
         src: url("../assets/fonts/Karla-VariableFont_wght.ttf");
     }
+    @font-face {
+        font-family: karla_italic;
+        src: url("../assets/fonts/Karla-Italic-VariableFont_wght.ttf");
+    }
+
     /* Establecer las fuentes */
     a,div.attribution{
         font-family: karla;
@@ -41,8 +46,9 @@
         font-family: karla;
         font-size: 0.9rem;
         color: hsl(0, 66%, 54%);
+        visibility: hidden;
         /* display: none; */
-        visibility: hidden
+        
     }
    /*  /********************************************************************/
     /*BACKGROUND CONFIGURATIONs*/
@@ -78,34 +84,12 @@
         padding-top: 1rem ;    
         justify-items: stretch;
     }
-    .queryType{
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 0.4rem;
-    }
-    .consent{
-        display: grid;
-        grid-template-columns: 1fr 19fr;
-        justify-items: left;
-        grid-template-areas: "check  message"
-                             "error  error";
-    }
-    .consentCheckbox{
-         grid-area: check;
-    } 
-    .consentSpan{
-        grid-area: message;
-    }
-    .requiredConsent{
-        grid-area: error;
-    }
     input, textarea, .radioQuery1, .radioQuery2{
         border-radius: 0.5rem;
     } 
     input.email, input.firstName, input.lastName, .radioQuery1, .radioQuery2{
         height: 2.5rem;
         width: 100%;
-        /* margin-left: 3%; */
         margin-top: 1.8%;
         margin-bottom: 5%;
         border: 0.15vh solid hsl(187, 24%, 22%);
@@ -118,11 +102,6 @@
         margin-top: 3%;
         resize: none;
     }
-    .consentCheckbox{
-        height: 0.8rem;
-        margin-top: 0.3rem;
-        margin-right: 1rem;
-     }
     .button{
         margin-top: 0.8rem;
         background-color: hsl(169, 82%, 27%);
@@ -131,23 +110,6 @@
         height: 4.5rem;
         width: 100%;  
     }
-    .query1, .query2{
-       justify-content: start;
-       height: 1rem;
-       opacity: 50%;
-    }
-    .radioQuery1{
-        display: grid;
-        grid-template-columns: 20% 80%;
-        align-items: center;
-    }
-    .radioQuery2
-    {
-        display: grid;
-        grid-template-columns: 20% 80%;
-        align-items: center;
-    }
-
     .attribution{
         padding: 2%;
         font-size: 11px; 
@@ -155,11 +117,104 @@
     }
     .attribution a { color: hsl(228, 45%, 44%); }
 
+
+
+    /*Cosassss de los radiobutton*/
+    .queryType{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0.4rem;
+    }
+
+    .query1, .query2{
+        justify-content: start;
+        height: 1rem;
+        opacity: 50%;
+     }
+     /* .radioQuery1,.radioQuery2{
+         display: grid;
+         grid-template-columns: 20% 80%;
+         align-items: center;
+     } */
+      /* Estilos básicos para el contenedor de radio buttons */
+    .radioQuery1, .radioQuery2 {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+        position: relative;
+    }
+     
+    /* Ocultar el radio button nativo */
+    .radioQuery1 input[type="radio"], 
+    .radioQuery2 input[type="radio"] {
+        opacity: 0;
+        position: absolute;
+    }
+
+     .query1, .query2, .spanQuery1, .spanQuery2{
+         cursor: pointer;
+         
+     }
+     /* Estilo inicial del radio button (antes de seleccionarse) */
+    .radioQuery1 label::before, 
+    .radioQuery2 label::before {
+        content: '';
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+        border: 2px solid hsl(186, 15%, 59%); /* Borde del radio button */
+        border-radius: 50%;
+        background-color: white;
+        margin-right: 10px;
+        margin-left: 10px;
+        vertical-align: middle;
+        transition: background-color 0.3s, border-color 0.3s;
+    }
+    /* Estilo del SVG que se mostrará cuando el radio button esté seleccionado */
+    .radioQuery1 input[type="radio"]:checked + label::before,
+    .radioQuery2 input[type="radio"]:checked + label::before {
+        content: url('../assets/images/icon-radio-selected.svg'); 
+        background: none; 
+        border: none;
+        margin-bottom: 0.5rem;
+    }
+
+
+    /*Cosas del checkbox*/
+    .consent{
+        display: grid;
+        grid-template-columns: 1fr 19fr;
+        justify-items: left;
+        grid-template-areas: "check  message"
+                             "error  error";
+    }
+    .consentCheckbox{
+         grid-area: check;
+    } 
+    .consentSpan{
+        grid-area: message;
+        cursor: pointer;
+    }
+    #requiredConsent{
+        grid-area: error;
+    }
+    
+    .consentCheckbox{
+        height: 0.8rem;
+        margin-top: 0.3rem;
+        margin-right: 1rem;
+     }
+    
+    
+    /*Subprocesos*/
+
     button:hover{
         color: white;
         cursor: pointer;
     }
-    input:hover, textarea:hover{
+    input:hover,
+    textarea:hover{
         border-color: #04AA6D;
         cursor: pointer;
         border-style: solid;
@@ -176,6 +231,34 @@
         transition: border-color 0.3s ease;
         background-color: #04AA6D;
     }
+
+    .sendCorrect{
+        position: fixed;
+        top: 20px;
+        left: 50%; 
+        transform: translateX(-50%);
+        background-color: hsl(187, 24%, 22%);
+        padding: 15px 30px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        display: none;
+        opacity: 0; 
+        transition: opacity 0.3s ease-in-out;  
+    }
+    .sendCorrect.active {
+        display: block;
+        display: flex;   
+        flex-direction: column;
+        align-items: center;
+        opacity: 1;
+      }
+      .labelCorrect{
+        color: white;
+        font-family: karla;
+        font-size: 0.9rem;
+    }
+
+    
 
     /********* COMPUTER VIEW ***************************
     *************************************************************************/
@@ -253,6 +336,7 @@
         
         .consentSpan{
             font-size: 0.8rem;
+            cursor: pointer;
         }
         
     }
@@ -344,3 +428,5 @@
         }
     }
  */
+
+ 
